--- a/test.ipynb
+++ b/test.ipynb
@@ -11,19 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 0]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "a = [1,1,0,1,0]\n",
+    "a.remove(0)\n",
+    "a"
+   ]
   },
   {
    "cell_type": "code",
