--- a/test.ipynb
+++ b/test.ipynb
@@ -11,24 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 1, 1, 0]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[1, 0, 1, 0]\n"
+     ]
     }
    ],
    "source": [
     "a = [1,1,0,1,0]\n",
-    "a.remove(0)\n",
-    "a"
+    "\n",
+    "print(a.pop(0))\n",
+    "print(a.pop())\n",
+    "print(a)"
    ]
   },
   {
@@ -73,10 +73,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5, 6, 3123, 42, 321, 4, 2]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val = 1\n",
+    "nums = [1,1,2,3,4,5,6,3123,1,1,42,321,4,1,2]\n",
+    "while True:\n",
+    "    for index, i in enumerate(nums):\n",
+    "        if i == val:\n",
+    "            nums.pop(index)\n",
+    "    if val not in nums:\n",
+    "        break\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "nums\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = 100\n",
+    "nums = [1,1,2,3,4,5,6,3123,1,1,42,321,4,1,2]\n",
+    "\n",
+    "if val not in nums:\n",
+    "    print('True')\n",
+    "else:\n",
+    "    print('False')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "b = 2\n",
+    "\n",
+    "temp = b\n",
+    "b = a\n",
+    "a = temp\n",
+    "\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque([1, 2])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "linkedlist = deque()\n",
+    "\n",
+    "linkedlist.append(1)\n",
+    "linkedlist.append(2)\n",
+    "\n",
+    "linkedlist"
+   ]
   },
   {
    "cell_type": "code",
