--- a/test.ipynb
+++ b/test.ipynb
@@ -175,8 +175,7 @@
     "\n",
     "linkedlist.append(1)\n",
     "linkedlist.append(2)\n",
-    "\n",
-    "linkedlist"
+    "JJJJJJJ"
    ]
   },
   {
