--- a/test.ipynb
+++ b/test.ipynb
@@ -180,6 +180,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums2 = [1,3,4,2]\n",
+    "dict = {}\n",
+    "for i in nums2:\n",
+    "    dict[i] = 0\n",
+    "nums2[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
